finished mobile, updated desktop, added javascript function to count time for blog, finished contact form

--- a/src/main.css
+++ b/src/main.css
@@ -212,3 +212,17 @@ header {
         padding-top: 100px;
     }
 }
+
+
+/*  ARROW */
+
+.arrow {
+    height: 50px;
+    width: 50px;
+    background-image: url("./img/arrow.png");
+    background-size: 50px;
+    position: absolute;
+    bottom: 0px;
+    text-align: center;
+    right: 47.5%;
+}
